fixed the issue with grid not wrapping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,12 +86,12 @@ h1 {
 /* Contanier */
 .container {
     margin: 0 auto;
-    width: 1060px;
+    max-width: 1060px;
     padding: 10px 2px;
 }
 #button-container {
     display: grid;
-    grid-template-columns: repeat( auto-fit, minmax(125px, 1fr) );
+    grid-template-columns: repeat( auto-fit, minmax(100px, 1fr) );
 }
 .gif-button {
     margin: 0 3px;
@@ -128,14 +128,13 @@ h1 {
     background-size: auto;
 }
 #gif-container {
-    width: 1060px;
     margin-top: 1rem;
     display: grid;
     grid-gap: 1rem;
-    grid-template-columns: repeat( auto-fill, minmax(300px, 1fr ));
+    grid-template-columns: repeat( auto-fit, minmax(250px, 1fr));
 }
 .gif-item {
-    max-width: 500px;
+    max-width: 100%;
 }
 .gif {
     cursor: pointer;
@@ -170,6 +169,9 @@ h1 {
 
 
 @media screen and (max-width: 600px) {
+    .container {
+        width: 100%;
+    }
     .navbar .search-container {
         float: none;
     }
@@ -184,10 +186,13 @@ h1 {
     .navbar input[type=text] {
         border: 1px solid #ccc;  
     }
+    .gif-button {
+        font-size: 1.3rem;
+    }
     .sticky + .container {
         padding-top: 180px;
     }
     #scroll-to-top {
-        font-size: 5rem;
+        font-size: 1.5rem;
     }
 }
